2010-02-11  Chris Dunlap  <cdunlap@llnl.gov>

	* configure.ac, config/x_ac_gpl_licensed.m4: Removed X_AC_GPL_LICENSED.
	* src/libmunge/munge.h: Removed #error if !GPL_LICENSED.
	* src/libmunge/munge.3.in, src/libmunge/munge_ctx.3.in,
	  src/libmunge/munge_enum.3.in: Removed references to GPL_LICENSED.

	* configure.ac: Added check for struct ucred in <sys/socket.h>.
	* src/libcommon/auth_policy.h: Added test for HAVE_STRUCT_UCRED to
	  MUNGE_AUTH_SO_PEERCRED client authentication check.

	* configure.ac, config/x_ac_check_so_peercred.m4:
	  Renamed from config/x_ac_check_peercred.m4.
	* src/libcommon/auth_policy.h, src/munged/auth_recv.c:
	  Renamed MUNGE_AUTH_PEERCRED to MUNGE_AUTH_SO_PEERCRED.

2010-02-10  Chris Dunlap  <cdunlap@llnl.gov>

	* configure.ac, config/x_ac_check_local_peercred.m4:
	  Added X_AC_CHECK_LOCAL_PEERCRED.  Added check for struct xucred in
	  <sys/ucred.h>.
	* src/libcommon/auth_policy.h, src/munged/auth_recv.c (auth_recv):
	  Added MUNGE_AUTH_LOCAL_PEERCRED client authentication support for
	  Debian GNU/kFreeBSD systems.

	* configure.ac: Replaced AC_GNU_SOURCE with AC_USE_SYSTEM_EXTENSIONS
	  per autoupdate.

	* : Re-bootstrap'd with autoconf-2.65, automake-1.11.1, libtool 2.2.6b.

	* : Updated copyright date range.

2009-09-18  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.init.in: Applied patch from Petter Reinholdtsen
	  <pere@hungry.com> to correct LSB run-time dependencies
	  <http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=541238>.
	  Note that LSB runlevels were removed by an earlier change to
	  prevent the daemon from being started by default on Fedora/RedHat.

2009-08-25  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/munged.c: Re-ordered functions.

2009-08-04  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge_defs.h: Tweaked comments.

	* src/libcommon/log.c: Added initializer for log_ctx.id.

	* src/libcommon/log.c (_log_aux): Replaced timestamp code w/ strftimet.

	* src/libcommon/str.c (strftimet): Added.